crates/oapigen/src/parsing/snapshots/oapigen__parsing__typeset__tests__parse_base_cases@boolean.snap
---
source: crates/oapigen/src/parsing/typeset.rs
expression: got.to_string()
---
use serde::{Deserialize, Serialize};
#[derive(Debug, Deserialize, Serialize)]
struct True(bool);
