crates/oapigen/src/parsing/snapshots/oapigen__parsing__typeset__tests__parse_base_cases@integer.snap
---
source: crates/oapigen/src/parsing/typeset.rs
expression: got.to_string()
---
use serde::{Deserialize, Serialize};
///The requested date
#[derive(Debug, Deserialize, Serialize)]
struct Age(i32);
