crates/oapigen/src/parsing/snapshots/oapigen__parsing__typeset__tests__parse_base_cases@number.snap
---
source: crates/oapigen/src/parsing/typeset.rs
expression: got.to_string()
---
"imports => [] \n schema => \"type Height = f32 ;\""
